--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["alloc"]
-alloc = ["bittwiddler-core/alloc"]
+default = ["alloc", "serde"]
+alloc = ["bittwiddler-core/alloc", "serde?/alloc"]
+serde = ["dep:serde", "serde/derive"]
 
 [dependencies]
 bittwiddler-core = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-core", default-features = false }
+serde = { version = "1", optional = true, default-features = false }
