--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,13 @@ edition = "2021"
 
 [features]
 default = ["std", "serde"]
-std = ["alloc", "bitvec/std", "jedec/std", "serde?/std"]
+std = [
+    "alloc",
+    "bitvec/std",
+    "jedec/std",
+    "serde?/std",
+    "dep:bittwiddler-textfile",
+]
 alloc = [
     "bittwiddler-core/alloc",
     "bitvec/alloc",
@@ -16,6 +22,8 @@ serde = ["dep:serde", "serde/derive"]
 
 [dependencies]
 bittwiddler-core = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-core", default-features = false }
+bittwiddler-macros = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-macros" }
+bittwiddler-textfile = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-textfile", optional = true }
 bitvec = { version = "1.0", default-features = false }
 serde = { version = "1", optional = true, default-features = false }
 jedec = { path = "../rust-jedec", default-features = false }
