Implement macrocell using spreadsheet magic for 32

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ bittwiddler-textfile = { path = "../programmable-logic-bit-tools-yet-again-with-
 bitvec = { version = "1.0", default-features = false }
 serde = { version = "1", optional = true, default-features = false }
 jedec = { path = "../rust-jedec", default-features = false }
+
+[build-dependencies]
+bittwiddler-dsl = { path = "../programmable-logic-bit-tools-yet-again-with-gay-this-time/bittwiddler-dsl" }
